<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.bdezonia</groupId>
  <artifactId>zorbage</artifactId>
  <version>1.6.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Zorbage</name>
  <description>Algebraic data types and algorithms for use in numeric processing</description>
  <url>https://github.com/bdezonia/zorbage</url>
  <inceptionYear>2016</inceptionYear>

  <licenses>
    <license>
      <name>BSD-2 clause</name>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git://github.com/bdezonia/zorbage</connection>
    <developerConnection>scm:git:git@github.com:bdezonia/zorbage</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/bdezonia/zorbage</url>
  </scm>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/bdezonia/zorbage/issues</url>
  </issueManagement>

  <properties>
    <package-name>nom.bdezonia</package-name>
    <license.licenseName>bsd_2</license.licenseName>
    <license.projectName>Zorbage: an algebraic data hierarchy for use in numeric processing.</license.projectName>
    <license.organizationName>Zorbage authors</license.organizationName>
    <license.copyrightOwners>Barry DeZonia</license.copyrightOwners>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <developers>
    <developer>
      <id>bdezonia</id>
      <name>Barry DeZonia</name>
      <url>https://github.com/User:bdezonia</url>
      <roles>
        <role>founder</role>
        <role>lead</role>
        <role>developer</role>
        <role>debugger</role>
        <role>reviewer</role>
        <role>support</role>
        <role>maintainer</role>
      </roles>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.jafama</groupId>
      <artifactId>jafama</artifactId>
      <version>2.3.1</version>
    </dependency>
    <dependency>
      <groupId>ch.obermuhlner</groupId>
      <artifactId>big-math</artifactId>
      <version>2.3.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M4</version>
        <configuration>
          <!--
            <parallel>classes</parallel>
            <useUnlimitedThreads>true</useUnlimitedThreads>
          -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.8</version>
        <extensions>true</extensions>
        <configuration>
           <serverId>ossrh</serverId>
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <snapshotRepository>
	  <id>ossrh</id>
	  <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
	  <id>ossrh</id>
	  <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

</project>
